<resources>
    <string name="app_name">RestoSam</string>
    <string name="edit_message">Enter a message</string>
    <string name="book_place_text">Выберите свободный столик:</string>
    <string name="button_send">Send</string>
    <string name="button_text">Выбрать ресторан</string>
    <string name="choose_time_text">Выберите время:</string>
    <string name="dish_text">Блюда:</string>
    <string name="menu1">Основные блюда</string>
    <string name="menu2">Вторые блюда</string>
    <string name="menu3">Десерты</string>
    <string name="menu4">Напитки</string>
    <string name="search">Искать</string>
    <string name="search_restaurant_text">Введите название ресторана</string>
    <string name="extend_search_text"><u>Расширенный поиск ресторана</u></string>
    <string name="max_distance">Радиус поиска:</string>
    <string name="max_price">Стоимость заказа до:</string>
    <string name="km">км</string>
    <string name="rub">руб</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="menu_header">Меню</string>
</resources>
