<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_extended_search_restaurant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sdern_000.restosam.ExtendedSearchRestaurantActivity">

    <TextView
        android:id="@+id/price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_price"
        android:gravity="center_horizontal"
        android:layout_below="@+id/distance_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_distance"
        android:gravity="center_horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <TextView
        android:id="@+id/dish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dish_text"
        android:gravity="center_horizontal"
        android:layout_below="@+id/price_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="18dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Spinner
        android:id="@+id/distance_spinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/distance_text"
        android:layout_toLeftOf="@+id/km"/>

    <Spinner
        android:id="@+id/price_spinner"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/price_text"
        android:layout_toLeftOf="@+id/rub"/>

    <Spinner
        android:id="@+id/dish_spinner"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/dish_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/rub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rub"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/price_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/km"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/km"
        android:gravity="center_horizontal"
        android:layout_alignTop="@+id/distance_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textSize="18dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choose_button"
        android:text="@string/search"
        android:background="@color/buttonColor"
        android:onClick="OnButtonClick"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>
